--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <met a name = "viewport" content = "width =device-width,initial-scale=1.0">
-            <title> Autocomplete searchbar-easy tutorials</title>
-            <link rel="stylesheet"href ="style.css">
-            <script src="https://kit.fontawesome.com/3ce5aba7e9.js" crossorigin="anonymous"></script>
-            <script src="<i class="fa-solid fa-strawberry"></i>"</script>
-            </head>
-            <body>
-                <div class ="search-box">
-                    <div class ="row">
-                        <input type ="text" id="input-box"placeholder="search anything"
-                        autocomplete="off">
-                        <button><i class="fa-solid fa-magnifying-glass"></i></button>
-                        <button><i class="fa-solid fa-strawberry"></i></button>
-                        </div>
-                    </body>
-                    </html>
-                    <div class="result-box">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div>class="meme generator"
+       <button class="generate-meme-btn">Generate Meme</button>
+       <h2 class="meme-title"><Loading ...</h2>
+        <img src=""alt="">
+        <div class="meme-author"></div>
+    </div>
+  <script src="main.js"></script>  
+</body>
+</html>
